templates/vechr-monitoring_template.yaml
---
# Source: vechr-monitoring/templates/alert-manager/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: vechr-alertmanager
    app.kubernetes.io/instance: alertmanager-release-name
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 0.25.0
  name: alertmanager-release-name
  namespace: default
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 9093
      protocol: TCP
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: alertmanager
    ports:
    - port: 9094
      protocol: TCP
    - port: 9094
      protocol: UDP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: vechr-alertmanager
      app.kubernetes.io/instance: alertmanager-release-name
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/part-of: vechr-monitoring
  policyTypes:
  - Egress
  - Ingress
---
# Source: vechr-monitoring/templates/kube-state-metrics/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: vechr-exporter
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 2.9.2
  name: kube-state-metrics-release-name
  namespace: default
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 8443
      protocol: TCP
    - port: 9443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: vechr-exporter
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/part-of: vechr-monitoring
  policyTypes:
  - Egress
  - Ingress
---
# Source: vechr-monitoring/templates/node-exporter/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: vechr-exporter
    app.kubernetes.io/name: node-exporter
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 1.6.1
  name: node-exporter-release-name
  namespace: default
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 9100
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: vechr-exporter
      app.kubernetes.io/name: node-exporter
      app.kubernetes.io/part-of: vechr-monitoring
  policyTypes:
  - Egress
  - Ingress
---
# Source: vechr-monitoring/templates/prometheus/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: vechr-prometheus
    app.kubernetes.io/instance: prometheus-release-name
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 2.45.0
  name: prometheus-release-name
  namespace: default
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 9090
      protocol: TCP
    - port: 8080
      protocol: TCP
    ports:
    - port: 9090
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: grafana-release-name-app
    ports:
    - port: 9090
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: vechr-prometheus
      app.kubernetes.io/instance: prometheus-release-name
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: vechr-monitoring
  policyTypes:
  - Egress
  - Ingress
---
# Source: vechr-monitoring/templates/prometheus/operator/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: vechr-prometheus-operator
    app.kubernetes.io/name: vechr-prometheus-operator
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 0.66.0
  name: prometheus-operator-release-name
  namespace: default
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: vechr-prometheus
    ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: vechr-prometheus-operator
      app.kubernetes.io/name: vechr-prometheus-operator
      app.kubernetes.io/part-of: vechr-monitoring
  policyTypes:
  - Egress
  - Ingress
---
# Source: vechr-monitoring/templates/alert-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: vechr-alertmanager
    app.kubernetes.io/instance: alertmanager-release-name
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 0.25.0
  name: alertmanager-release-name
  namespace: default
spec:
  ports:
  - name: web
    port: 9093
    targetPort: web
  - name: reloader-web
    port: 8080
    targetPort: reloader-web
  selector:
    app.kubernetes.io/component: vechr-alertmanager
    app.kubernetes.io/instance: alertmanager-release-name
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: vechr-monitoring
  sessionAffinity: ClientIP
---
# Source: vechr-monitoring/templates/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: default
  labels:
    app.kubernetes.io/component: vechr-grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 10.0.3
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: vechr-grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: vechr-monitoring
  ports:
    - port: 3000
      name: grafana-dashboard
      targetPort: 3000
---
# Source: vechr-monitoring/templates/kube-state-metrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: vechr-exporter
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 2.9.2
  name: kube-state-metrics-release-name
  namespace: default
spec:
  clusterIP: None
  ports:
  - name: https-main
    port: 8443
    targetPort: https-main
  - name: https-self
    port: 9443
    targetPort: https-self
  selector:
    app.kubernetes.io/component: vechr-exporter
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/part-of: vechr-monitoring
---
# Source: vechr-monitoring/templates/loki/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-service
  namespace: default
  labels:
    app.kubernetes.io/component: vechr-loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 2.8.0
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: vechr-loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/part-of: vechr-monitoring
  ports:
    - port: 3100
      name: loki-port
      targetPort: 3100
---
# Source: vechr-monitoring/templates/node-exporter/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: vechr-exporter
    app.kubernetes.io/name: node-exporter
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 1.6.1
  name: node-exporter-service
  namespace: default
spec:
  clusterIP: None
  ports:
  - name: https
    port: 9100
    targetPort: https
  selector:
    app.kubernetes.io/component: vechr-exporter
    app.kubernetes.io/name: node-exporter
    app.kubernetes.io/part-of: vechr-monitoring
---
# Source: vechr-monitoring/templates/prometheus/operator/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: vechr-prometheus-operator
    app.kubernetes.io/name: vechr-prometheus-operator
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 0.66.0
  name: prometheus-operator-release-name
  namespace: default
spec:
  clusterIP: None
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    app.kubernetes.io/component: vechr-prometheus-operator
    app.kubernetes.io/name: vechr-prometheus-operator
    app.kubernetes.io/part-of: vechr-monitoring
---
# Source: vechr-monitoring/templates/prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: vechr-prometheus
    app.kubernetes.io/instance: prometheus-release-name
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 2.45.0
  name: prometheus-service
  namespace: default
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  - name: reloader-web
    port: 8080
    targetPort: reloader-web
  selector:
    app.kubernetes.io/component: vechr-prometheus
    app.kubernetes.io/instance: prometheus-vechr-monitoring
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: vechr-monitoring
  sessionAffinity: ClientIP
---
# Source: vechr-monitoring/templates/tempo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo-service
  namespace: default
  labels:
    app.kubernetes.io/component: vechr-tempo
    app.kubernetes.io/name: tempo
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: latest
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: vechr-tempo
    app.kubernetes.io/name: tempo
    app.kubernetes.io/part-of: vechr-monitoring
  ports:
    - name: tempo-port
      port: 3200
      targetPort: 3200
    
    - name: jaeger-ingest
      port: 14268
      targetPort: 14268
    
    - name: jaeger-grpc
      port: 14250
      targetPort: 14250
    
    - name: tempo-grpc
      port: 9095
      targetPort: 9095
    
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    
    - name: otlp-http
      port: 4318
      targetPort: 4318
    
    - name: zipkin
      port: 9411
      targetPort: 9411
---
# Source: vechr-monitoring/templates/node-exporter/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/component: vechr-exporter
    app.kubernetes.io/name: node-exporter
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 1.6.1
  name: node-exporter-release-name
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: vechr-exporter
      app.kubernetes.io/name: node-exporter
      app.kubernetes.io/part-of: vechr-monitoring
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: node-exporter
      labels:
        app.kubernetes.io/component: vechr-exporter
        app.kubernetes.io/name: node-exporter
        app.kubernetes.io/part-of: vechr-monitoring
        app.kubernetes.io/version: 1.6.1
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --web.listen-address=127.0.0.1:9100
        
        - --path.sysfs=/host/sys
        
        
        - --path.rootfs=/host/root
        - --path.udev.data=/host/root/run/udev/data
        
        - --no-collector.wifi
        - --no-collector.hwmon
        - --no-collector.btrfs
        - --collector.filesystem.mount-points-exclude=^/(dev|proc|sys|run/k3s/containerd/.+|var/lib/docker/.+|var/lib/kubelet/pods/.+)($|/)
        - --collector.netclass.ignored-devices=^(veth.*|[a-f0-9]{15})$
        - --collector.netdev.device-exclude=^(veth.*|[a-f0-9]{15})$
        image: quay.io/prometheus/node-exporter:v1.6.1
        name: node-exporter-release-name
        resources:
          limits:
            cpu: 250m
            memory: 180Mi
          requests:
            cpu: 102m
            memory: 180Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - SYS_TIME
            drop:
            - ALL
          readOnlyRootFilesystem: false
        volumeMounts:
        
        - mountPath: /host/sys
          mountPropagation: None
          name: sys
          readOnly: true
        
        - mountPath: /host/root
          mountPropagation:  None
          name: root
          readOnly: true
      - args:
        - --logtostderr
        - --secure-listen-address=[$(IP)]:9100
        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
        - --upstream=http://127.0.0.1:9100/
        image: quay.io/brancz/kube-rbac-proxy:v0.14.2
        name: kube-rbac-proxy
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: https
        resources:
          limits:
            cpu: 20m
            memory: 40Mi
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
      hostNetwork: true
      hostPID: true
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      serviceAccountName: node-exporter-release-name
      tolerations:
      - operator: Exists
      volumes:
      
      - hostPath:
          path: /sys
        name: sys
      
      
      - hostPath:
          path: /
        name: root
      
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 10%
    type: RollingUpdate
---
# Source: vechr-monitoring/templates/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-release-name
  namespace: default
  labels:
    app.kubernetes.io/component: vechr-grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 10.0.3
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vechr-grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: vechr-monitoring
  template:
    metadata:
      name: grafana-release-name
      labels:
        app.kubernetes.io/component: vechr-grafana
        app.kubernetes.io/name: grafana
        app.kubernetes.io/part-of: vechr-monitoring
    spec:
      restartPolicy: Always
      containers:
        - name: grafana-release-name
          image: grafana/grafana:10.0.3
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
          - name: datasource-config-volume
            mountPath: /etc/grafana/provisioning/datasources/datasource.yaml
            subPath: datasource.yaml

      volumes:
        - name: datasource-config-volume
          configMap:
            name: datasource-grafana
---
# Source: vechr-monitoring/templates/kube-state-metrics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: vechr-exporter
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 2.9.2
  name: kube-state-metrics-release-name
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vechr-exporter
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/part-of: vechr-monitoring
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: kube-state-metrics
      labels:
        app.kubernetes.io/component: vechr-exporter
        app.kubernetes.io/name: kube-state-metrics
        app.kubernetes.io/part-of: vechr-monitoring
        app.kubernetes.io/version: 2.9.2
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --host=127.0.0.1
        - --port=8081
        - --telemetry-host=127.0.0.1
        - --telemetry-port=8082
        image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.9.2
        name: kube-state-metrics
        resources:
          limits:
            cpu: 100m
            memory: 250Mi
          requests:
            cpu: 10m
            memory: 190Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          seccompProfile:
            type: RuntimeDefault
      - args:
        - --logtostderr
        - --secure-listen-address=:8443
        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
        - --upstream=http://127.0.0.1:8081/
        image: quay.io/brancz/kube-rbac-proxy:v0.14.2
        name: kube-rbac-proxy-main
        ports:
        - containerPort: 8443
          name: https-main
        resources:
          limits:
            cpu: 40m
            memory: 40Mi
          requests:
            cpu: 20m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
      - args:
        - --logtostderr
        - --secure-listen-address=:9443
        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
        - --upstream=http://127.0.0.1:8082/
        image: quay.io/brancz/kube-rbac-proxy:v0.14.2
        name: kube-rbac-proxy-self
        ports:
        - containerPort: 9443
          name: https-self
        resources:
          limits:
            cpu: 20m
            memory: 40Mi
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: kube-state-metrics-release-name
---
# Source: vechr-monitoring/templates/loki/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-release-name
  namespace: default
  labels:
    app.kubernetes.io/component: vechr-loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 2.8.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vechr-loki
      app.kubernetes.io/name: loki
      app.kubernetes.io/part-of: vechr-monitoring
  template:
    metadata:
      name: loki-release-name
      labels:
        app.kubernetes.io/component: vechr-loki
        app.kubernetes.io/name: loki
        app.kubernetes.io/part-of: vechr-monitoring
    spec:
      restartPolicy: Always
      containers:
        - name: loki-release-name
          image: grafana/loki:2.8.0
          args: ["-config.file=/etc/loki/config.yaml"]
          ports:
            - name: http
              containerPort: 3100
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
          - name: config-loki-volume
            mountPath: /etc/loki/config.yaml
            subPath: config.yaml

      volumes:
        - name: config-loki-volume
          configMap:
            name: config-loki
---
# Source: vechr-monitoring/templates/prometheus/operator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: vechr-prometheus-operator
    app.kubernetes.io/name: vechr-prometheus-operator
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: 0.66.0
  name: prometheus-operator-release-name
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vechr-prometheus-operator
      app.kubernetes.io/name: vechr-prometheus-operator
      app.kubernetes.io/part-of: vechr-monitoring
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: prometheus-operator
      labels:
        app.kubernetes.io/component: vechr-prometheus-operator
        app.kubernetes.io/name: vechr-prometheus-operator
        app.kubernetes.io/part-of: vechr-monitoring
        app.kubernetes.io/version: 0.66.0
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --kubelet-service=kube-system/kubelet
        - --prometheus-config-reloader=quay.io/prometheus-operator/prometheus-config-reloader:v0.66.0
        image: quay.io/prometheus-operator/prometheus-operator:v0.66.0
        name: prometheus-operator-release-name
        ports:
        - containerPort: 8080
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      - args:
        - --logtostderr
        - --secure-listen-address=:8443
        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
        - --upstream=http://127.0.0.1:8080/
        image: quay.io/brancz/kube-rbac-proxy:v0.14.2
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
        resources:
          limits:
            cpu: 20m
            memory: 40Mi
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: prometheus-operator-release-name
---
# Source: vechr-monitoring/templates/tempo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo-release-name
  namespace: default
  labels:
    app.kubernetes.io/component: vechr-tempo
    app.kubernetes.io/name: tempo
    app.kubernetes.io/part-of: vechr-monitoring
    app.kubernetes.io/version: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: vechr-tempo
      app.kubernetes.io/name: tempo
      app.kubernetes.io/part-of: vechr-monitoring
  template:
    metadata:
      name: tempo-release-name
      labels:
        app.kubernetes.io/component: vechr-tempo
        app.kubernetes.io/name: tempo
        app.kubernetes.io/part-of: vechr-monitoring
    spec:
      restartPolicy: Always
      containers:
        - name: tempo-release-name
          image: grafana/tempo:latest
          args: ["-config.file=/etc/config.yaml"]
          ports:
            
            - name: jaeger-ingest
              containerPort: 14268
              protocol: TCP
            
            - name: jaeger-grpc
              containerPort: 14250
              protocol: TCP
            
            - name: tempo-grpc
              containerPort: 9095
              protocol: TCP
            
            - name: otlp-grpc
              containerPort: 4317
              protocol: TCP
            
            - name: otlp-http
              containerPort: 4318
              protocol: TCP
            
            - name: zipkin
              containerPort: 9411
              protocol: TCP
            
          imagePullPolicy: Always
          volumeMounts:
          - name: config-tempo-volume
            mountPath: /etc/config.yaml
            subPath: config.yaml

      volumes:
        - name: config-tempo-volume
          configMap:
            name: config-tempo
